format TokenHook
